src/yini_test/cases/golden/lenient/valid/numbers/binary-numbers.yini
@yini

^ Numbers
mask = 0b1010
withSeparators = 0b_1010_1100
