src/yini_test/cases/golden/lenient/invalid/numbers/malformed-hex.yini
@yini

^ Numbers
value = 0xGG
